<resources>

    <string name="_8" translatable="false">8</string>
    <string name="_2" translatable="false">2</string>
    <string name="_5" translatable="false">5</string>
    <string name="_3" translatable="false">3</string>
    <string name="_1" translatable="false">1</string>
    <string name="_4" translatable="false">4</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multiply" translatable="false">*</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="percent" translatable="false">%</string>
    <string name="split" translatable="false">/</string>
    <string name="delete" translatable="false">c</string>
    <string name="memory" translatable="false">m</string>
    <string name="equal" translatable="false">=</string>
    <string name="app_name" translatable="false">app_name</string>
    <string name="settings">Settings</string>
    <string name="light_theme_button">Light Theme</string>
    <string name="dark_theme_button">Dark Theme</string>
    <string name="default_theme_button">Default Theme</string>
    <string name="return_button">Return</string>
</resources>