<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cosmos"
    android:clipToPadding="true"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="0dp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_8"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_2"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_5"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_3"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_memory"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_1"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_4"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_6"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_7"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/plus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_minus"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/minus"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_plus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_multiply"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button_split"
        app:layout_constraintStart_toEndOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_9"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button0"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_0"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button_dot"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dot"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button_percent"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/percent"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button_split"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/split"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_delete"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/delete"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button_memory"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/memory"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button_equal"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/button_equal_height"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/equal"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <EditText
        android:id="@+id/editText"
        android:labelFor="@id/editText"
        android:autofillHints="numbers"
        android:layout_width="@dimen/editText_width"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FAF6F6"
        android:textSize="@dimen/editText_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/enter_your_name_width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="70dp" />


    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

